--- a/audio/static/html/audio.html
+++ b/audio/static/html/audio.html
@@ -1,4 +1,5 @@
 <div class="audio_block">
+<h3 class="hd hd-2">Audio<h3>
 <audio controls preload>
   <source src="{src}">
   <embed height="50" width="100" src="{src}">
