--- a/audio/static/html/audio.html
+++ b/audio/static/html/audio.html
@@ -1,6 +1,6 @@
 <div class="audio_block">
 <h3 class="hd hd-2">Audio<h3>
-<audio controls preload>
+<audio controls preload controlsList="nodownload">
   <source src="{src}">
   <embed height="50" width="100" src="{src}">
 </audio>
